--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,10 @@ framework = arduino
 upload_port = /dev/ttyUSB*
 lib_deps =
     khoih-prog/ESPAsync_WiFiManager @ ^1.6.0
+    knolleary/PubSubClient @ ^2.8
+    bblanchon/ArduinoJson @ ^6.17.3
+    ayushsharma82/AsyncElegantOTA @ ^2.2.5
+
 
 
 
